Add users CRUD and supporting infra
